# htp-analyzer-backend

./: .env.example  .env.local  HTP Checklist.txt  README.md  app.py  main.py  pyproject.toml  render.yaml  requirements.txt
data/processed/house_only_dataset/: data.yaml
data/processed/house_only_dataset/train/: labels.cache
data/processed/house_only_dataset/valid/: labels.cache
data/raw/: data.yaml
data/raw/test/labels/: -_-1_-_13_analog_house_20220915135422_png.rf.5257aa24b0b1b93df3acc4e3e2041f5f.txt  -_-1_-_14_analog_house_20220915135450_png.rf.ff2e1918687e2fdc305c73391958b0c5.txt  -_-1_-_4_analog_house_20220915134705_png.rf.000b761ef7cdd47f8aba7e68a4ab389c.txt  -_-1_-_52_analog_house_20220916095722_png.rf.c7561e9d486df056bb46ecb4b4f316e5.txt  -_-1_-_53_analog_house_20220916095806_png.rf.77d19a60dab58a927202fc68b0c4d5c4.txt  -_-1_-_54_analog_house_20220916095856_png.rf.a3e9dc9947c03b974d00846fdc56e16f.txt  -_-1_-_54_digital_house_20220831113500_png.rf.5a8f8b83060dec07a39a280526dd74ed.txt  -_-1_-_55_digital_house_20220831113325_png.rf.b19f40dce715f06ed211295b61c8d766.txt  -_-1_-_58_analog_house_20220916100230_png.rf.d30963edaa80f8f1839340d4759abba3.txt  -_-1_-_61_analog_house_20220916100457_png.rf.2e6088f10ac812e95ff5e8c1511c8827.txt  -_-1_-_63_analog_house_20220916103647_png.rf.62a49a5d8d6736baaba45344c09c5fd8.txt  -_-1_-_71_analog_house_20220916105159_png.rf.e848c24fde200098bd2d818ab5f961ce.txt  (+36 more)
results/evaluation/evaluation_results/: evaluation_report.md
src/: data_processor.py  feature_extractor.py  model_evaluator.py  train_yolo.py
(+1119 files in other folders)
